# rocksdb-multiplatform

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.gradle.kts  buildDependencies.sh  buildObjectiveRocksMac.sh  buildObjectiveRocksiOS.sh  buildRocksdbApple.sh  buildRocksdbLinux.sh  buildRocksdbMac.sh  buildRocksdbMinGW.sh  buildRocksdbiOS.sh  download-rocksdb.sh  downloadBzip2.sh  downloadLz4.sh  downloadRocksdb.sh  downloadSnappy.sh  downloadZlib.sh  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  update_to_master.yml
src/: androidMain
src/androidNativeTest/kotlin/maryk/: WindowsIgnore.kt  folderUtils.kt
src/appleMain/kotlin/maryk/: Buffer.kt  ByteArrayToNSData.kt  ByteBuffer.kt  EnumSet.kt  NSDataToByteArray.kt  wrapWithErrorThrower.kt
src/appleTest/kotlin/maryk/: createFolder.kt  deleteFolder.kt  doesFolderExist.kt  encodeToByteArray.kt  systemLineSeparator.kt
src/commonMain/kotlin/maryk/: Buffer.kt  ByteBuffer.kt  EnumSet.kt
src/commonTest/kotlin/maryk/: AtomicInteger.kt  WindowsIgnore.kt  assertBufferEquals.kt  assertContains.kt  assertContentEquals.kt  createFile.kt  createFolder.kt  currentTimeMillis.kt  decodeToString.kt  (+7 more)
src/jvmMain/: AndroidManifest.xml
src/main/: AndroidManifest.xml
src/nativeInterop/cinterop/: mingw_tls_shim.cpp  rocksdb.def  rocksdbC.def  rocksdbIOS-iphoneos.def  rocksdbIOS-iphonesimulator.def  rocksdbIOS.def  rocksdbMacOS.def  rocksdb_ios_arm64.def  rocksdb_ios_simulator_arm64.def  rocksdb_linux_arm64.def  rocksdb_linux_x86_64.def  rocksdb_macos_arm64.def  rocksdb_macos_x86_64.def
(+820 files in other folders)
